--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,13 @@
     "require": {
         "php": "^7.1.3",
         "darryldecode/cart": "~4.0",
+        "fabpot/goutte": "^3.2",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.2.0"
+        "laravelcollective/html": "^5.2.0",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
