--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fabpot/goutte": "^3.2",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
+        "jacquestvanzuydam/laravel-firebird": "dev-5.5-support",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.2.0",
