--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.2.0",
         "maatwebsite/excel": "^3.1",
-        "mercadopago/dx-php": "dev-master"
+        "mercadopago/dx-php": "1.2.1",
+        "mercadopago/sdk": "0.5.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
